--- a/SingleDose.csproj
+++ b/SingleDose.csproj
@@ -43,6 +43,7 @@
     <Compile Include="SubMenus\Triggers.cs" />
     <Compile Include="SubMenus\Settings.cs" />
     <Compile Include="Misc\TriggerValues_Misc.cs" />
+    <Compile Include="Techniques\FiberInject.cs" />
     <Compile Include="Techniques\Suspend_QueueUserAPC.cs" />
     <Compile Include="Techniques\SRDI.cs" />
     <Compile Include="Techniques\SC_Syscall_CT.cs" />
