--- a/SingleDose.csproj
+++ b/SingleDose.csproj
@@ -43,6 +43,10 @@
     <Compile Include="SubMenus\Triggers.cs" />
     <Compile Include="SubMenus\Settings.cs" />
     <Compile Include="Misc\TriggerValues_Misc.cs" />
+    <Compile Include="Techniques\EnumDesktops.cs" />
+    <Compile Include="Techniques\EnumDateFormatsEx.cs" />
+    <Compile Include="Techniques\EnumWindows.cs" />
+    <Compile Include="Techniques\EnumChildWindows.cs" />
     <Compile Include="Techniques\FiberInject.cs" />
     <Compile Include="Techniques\Suspend_QueueUserAPC.cs" />
     <Compile Include="Techniques\SRDI.cs" />
