Added features and code cleanup. See description.
New Trigger:  
Timer - A simple countdown timer to wait x amount of seconds prior to execution.  

New Inject Technique:  
KernelCallbackTable - technique used by FinFisher/FinSpy. 
This was ported to C# from the writeup here: https://modexp.wordpress.com/2019/05/25/windows-injection-finspy/.  

Misc:  
- Help command output is much cleaner than previous versions.  
- The numbering scheme/display of techniques now does a better job of identifying what is a loader vs what is an inject. Take note of the new numbering scheme when building.

--- a/SingleDose.csproj
+++ b/SingleDose.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Techniques\EnumWindows.cs" />
     <Compile Include="Techniques\EnumChildWindows.cs" />
     <Compile Include="Techniques\FiberInject.cs" />
+    <Compile Include="Techniques\KernelCallbackTable.cs" />
     <Compile Include="Techniques\Suspend_QueueUserAPC.cs" />
     <Compile Include="Techniques\SRDI.cs" />
     <Compile Include="Techniques\SC_Syscall_CT.cs" />
