Added NtCreateSection + PInvoke centralization
1) Added the NtCreateSection technique which was ported from ired.team's writeup. Full url in the technique's description ("describe NtCreateSection")

2) Added a change to the build process. Instead of each technique defining their own version of a pinvoke in the "<technique>.BODY", they are now all stored under the pinvoke folder. Centralizing these actually freed up a surprising amount of space.

--- a/SingleDose.csproj
+++ b/SingleDose.csproj
@@ -41,21 +41,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Misc\ShellcodeFormats.cs" />
+    <Compile Include="PInvoke\Kernel32.cs" />
+    <Compile Include="PInvoke\Ntdll.cs" />
+    <Compile Include="PInvoke\User32.cs" />
     <Compile Include="SubMenus\Triggers.cs" />
     <Compile Include="SubMenus\Settings.cs" />
     <Compile Include="Misc\TriggerValues_Misc.cs" />
     <Compile Include="Techniques\AddressOfEntryPoint.cs" />
+    <Compile Include="Techniques\CreateRemoteThread-Dll.cs" />
     <Compile Include="Techniques\EnumDesktops.cs" />
     <Compile Include="Techniques\EnumDateFormatsEx.cs" />
     <Compile Include="Techniques\EnumWindows.cs" />
     <Compile Include="Techniques\EnumChildWindows.cs" />
     <Compile Include="Techniques\FiberInject.cs" />
     <Compile Include="Techniques\KernelCallbackTable.cs" />
+    <Compile Include="Techniques\NtCreateSection_NtMapViewOfSection.cs" />
     <Compile Include="Techniques\Suspend_QueueUserAPC.cs" />
     <Compile Include="Techniques\SRDI.cs" />
     <Compile Include="Techniques\SC_Syscall_CT.cs" />
     <Compile Include="Techniques\EB_QueueUserAPC.cs" />
-    <Compile Include="Techniques\Dll_CRT.cs" />
     <Compile Include="Misc\CSBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
